[gd_scene load_steps=29 format=3 uid="uid://b3ayman5fj78e"]

[ext_resource type="Script" path="res://WIP/Test Title/TitleScreen.gd" id="1_c1cdu"]
[ext_resource type="Texture2D" uid="uid://2dn7ue0krshg" path="res://WIP/Test Title/Background.png" id="3_cf3r5"]
[ext_resource type="Script" path="res://WIP/Test Title/TitleElement.gd" id="4_87s2s"]
[ext_resource type="Texture2D" uid="uid://b30ouhs6prbv0" path="res://WIP/Test Title/Title Logo.png" id="5_oq7xq"]
[ext_resource type="Texture2D" uid="uid://brbflkp2n5y5o" path="res://WIP/Test Title/Gate BG.png" id="5_q5xwh"]
[ext_resource type="Texture2D" uid="uid://boaomhltq70aw" path="res://WIP/Test Title/Critter.png" id="6_2y50f"]
[ext_resource type="Texture2D" uid="uid://cylcwmj2mpoeb" path="res://WIP/Test Title/Gate.png" id="6_pexux"]
[ext_resource type="Texture2D" uid="uid://gyedxpeyid6t" path="res://WIP/Test Title/Ground Ripple.png" id="7_y6gi8"]
[ext_resource type="Texture2D" uid="uid://cagfidgfwtfx" path="res://WIP/Test Title/Woman.png" id="8_4q8e5"]
[ext_resource type="AudioStream" uid="uid://dmk3rpiqyvabw" path="res://Sounds/TITLE SCREEN/Ambient 18.wav" id="8_lf0la"]
[ext_resource type="AudioStream" uid="uid://1tga237kg5yb" path="res://Sounds/TITLE SCREEN/foley_cloth_light_fast_movement_04.wav" id="9_f608y"]
[ext_resource type="Texture2D" uid="uid://bmj7218efobkb" path="res://WIP/Test Title/Sword.png" id="9_n3h17"]
[ext_resource type="AudioStream" uid="uid://bhxrykwqdbh52" path="res://Sounds/SFX/Breathe 6.wav" id="10_y35vf"]
[ext_resource type="Texture2D" uid="uid://bgda0ospr46l0" path="res://WIP/Test Title/Sparkle.png" id="11_g50dv"]
[ext_resource type="Texture2D" uid="uid://cwfrbq53fjhao" path="res://WIP/Test Title/Menu.png" id="12_hk5s0"]
[ext_resource type="AudioStream" uid="uid://bsk32hxop7i4v" path="res://Sounds/Music/Japanese Meditation Main.wav" id="15_65g3f"]

[sub_resource type="Animation" id="Animation_800mk"]
resource_name = "Blink"
length = 5.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5, 2.4, 2.85, 2.95, 4.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.15, 0.2, 0.3, 0.35, 0.5, 0.55, 2.3, 2.35, 2.95, 3, 3.05, 4.55, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0, 1, 2, 1, 0, 0, 1, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_lccmj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6cok"]
_data = {
"Blink": SubResource("Animation_800mk"),
"RESET": SubResource("Animation_lccmj")
}

[sub_resource type="Animation" id="Animation_5nip0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_twec5"]
resource_name = "Ripple"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ikub7"]
_data = {
"RESET": SubResource("Animation_5nip0"),
"Ripple": SubResource("Animation_twec5")
}

[sub_resource type="Animation" id="Animation_66ml7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i4ov4"]
resource_name = "Sparkle"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jrehu"]
_data = {
"RESET": SubResource("Animation_66ml7"),
"Sparkle": SubResource("Animation_i4ov4")
}

[sub_resource type="Animation" id="Animation_714wi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_aid1w"]
resource_name = "Standard"
length = 0.99
loop_mode = 1
step = 0.09
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.27, 0.36, 0.45, 0.54, 0.63, 0.72, 0.81, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhm28"]
_data = {
"RESET": SubResource("Animation_714wi"),
"Standard": SubResource("Animation_aid1w")
}

[node name="Title Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c1cdu")

[node name="Clothing" type="AudioStreamPlayer2D" parent="."]
position = Vector2(380, 327)
stream = ExtResource("9_f608y")
volume_db = -17.2
autoplay = true
bus = &"SFX"

[node name="Background Filler" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -18.0
offset_top = -14.0
offset_right = 966.0
offset_bottom = 501.0
color = Color(0, 0, 0, 1)

[node name="Floor" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 503.0
offset_right = 969.0
offset_bottom = 552.0
color = Color(0, 0.0627451, 0, 1)

[node name="Wall" type="Sprite2D" parent="."]
position = Vector2(-10, -10)
texture = ExtResource("3_cf3r5")
centered = false
script = ExtResource("4_87s2s")
max_offset = Vector2(10, 10)

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(802, 125)
texture = ExtResource("5_oq7xq")
script = ExtResource("4_87s2s")

[node name="Portal" type="Sprite2D" parent="."]
position = Vector2(37, 21)
texture = ExtResource("5_q5xwh")
centered = false
script = ExtResource("4_87s2s")
max_offset = Vector2(5, 5)

[node name="Critter" type="Sprite2D" parent="."]
visible = false
position = Vector2(938, 453)
texture = ExtResource("6_2y50f")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Critter"]
libraries = {
"": SubResource("AnimationLibrary_g6cok")
}

[node name="Gate" type="Sprite2D" parent="."]
position = Vector2(-18, -9)
texture = ExtResource("6_pexux")
centered = false
script = ExtResource("4_87s2s")
max_offset = Vector2(8, 8)

[node name="Ambient" type="AudioStreamPlayer2D" parent="Gate"]
position = Vector2(310, 269)
stream = ExtResource("8_lf0la")
volume_db = -15.6
pitch_scale = 0.33
autoplay = true
bus = &"SFX"

[node name="Breath" type="AudioStreamPlayer2D" parent="Gate"]
position = Vector2(310, 269)
stream = ExtResource("10_y35vf")
volume_db = 1.8
pitch_scale = 0.83
autoplay = true
bus = &"SFX"

[node name="Ground Ripple" type="Sprite2D" parent="."]
position = Vector2(314, 512)
texture = ExtResource("7_y6gi8")
hframes = 3
vframes = 4
script = ExtResource("4_87s2s")
max_offset = Vector2(8, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ground Ripple"]
libraries = {
"": SubResource("AnimationLibrary_ikub7")
}
autoplay = "Ripple"

[node name="Sword" type="Sprite2D" parent="."]
position = Vector2(452, 402)
texture = ExtResource("9_n3h17")
script = ExtResource("4_87s2s")
max_offset = Vector2(10, 10)

[node name="Sparkle" type="Sprite2D" parent="Sword"]
position = Vector2(54, 54)
texture = ExtResource("11_g50dv")
hframes = 8
script = ExtResource("4_87s2s")
max_offset = Vector2(10, 10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sword/Sparkle"]
libraries = {
"": SubResource("AnimationLibrary_jrehu")
}

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(325, 344)
texture = ExtResource("8_4q8e5")
hframes = 4
vframes = 3
frame = 1
script = ExtResource("4_87s2s")
max_offset = Vector2(10, 10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
libraries = {
"": SubResource("AnimationLibrary_vhm28")
}
autoplay = "Standard"

[node name="Menu Scroll" type="Sprite2D" parent="."]
position = Vector2(827, 310)
texture = ExtResource("12_hk5s0")

[node name="Label2" type="Label" parent="Menu Scroll"]
offset_left = 15.0
offset_top = 44.0
offset_right = 113.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0.423651, 0.423651, 0.423651, 1)
theme_override_font_sizes/font_size = 12
text = "v0.01b"
horizontal_alignment = 1

[node name="Start Button" type="TextureButton" parent="Menu Scroll"]
unique_name_in_owner = true
offset_left = -67.0
offset_top = -57.0
offset_right = 83.0
offset_bottom = -38.0

[node name="Label" type="Label" parent="Menu Scroll/Start Button"]
layout_mode = 0
offset_left = 27.0
offset_top = -2.0
offset_right = 125.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "START TRIAL"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Continue Button" type="TextureButton" parent="Menu Scroll"]
unique_name_in_owner = true
offset_left = -67.0
offset_top = -33.0
offset_right = 83.0
offset_bottom = -14.0

[node name="Label" type="Label" parent="Menu Scroll/Continue Button"]
layout_mode = 0
offset_left = 27.0
offset_top = -2.0
offset_right = 125.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CONTINUE"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Options Button" type="TextureButton" parent="Menu Scroll"]
unique_name_in_owner = true
offset_left = -67.0
offset_top = -9.0
offset_right = 83.0
offset_bottom = 10.0

[node name="Label" type="Label" parent="Menu Scroll/Options Button"]
layout_mode = 0
offset_left = 27.0
offset_top = -2.0
offset_right = 125.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "OPTIONS"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_65g3f")
autoplay = true
bus = &"Music"

[connection signal="finished" from="Clothing" to="." method="_on_clothing_finished"]
[connection signal="pressed" from="Menu Scroll/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu Scroll/Continue Button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Menu Scroll/Options Button" to="." method="_on_options_button_pressed"]
